--- a/app/src/main/res/layout/item_banner.xml
+++ b/app/src/main/res/layout/item_banner.xml
@@ -3,8 +3,7 @@
     style="@style/ImageCardViewStyle"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
-    android:layout_marginBottom="@dimen/default_margin">
+    android:layout_marginHorizontal="@dimen/activity_horizontal_margin">
 
     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/plan_iv"
